--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #242424;
 
-// Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+$secondary-color: #E95622;
+$header-dark: #292929;
+$primary-light: #FFFFFF;
+$error: #b40000;
