--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -118,6 +118,12 @@ main{
     background-color: $secondary-color;
     border: none;
     font-weight: 700;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+
+    &:hover {
+        filter: brightness(0.85);
+        transform: scale(1.05);
+    }
 }
 
 .centered{
