--- a/resources/sass/manager/index.scss
+++ b/resources/sass/manager/index.scss
@@ -4,6 +4,7 @@
 
     hr{
         color: #242424;
+        margin: 0;
     }
 
     .button{
@@ -32,7 +33,7 @@
     form.top{
         display: flex;
         width: 50rem;
-        margin: auto;
+        margin: 0 auto;
         margin-bottom: 5rem;
 
         input{
@@ -51,7 +52,7 @@
     .list{
         background-color: #D9D9D9;
         border-radius: 1rem;
-        margin: auto;
+        margin: 0 auto;
         width: 50rem;
 
         .school{
