styled  booking index

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,6 +5,5 @@ $secondary-color: #E95622;
 $header-dark: #292929;
 $primary-light: #FFFFFF;
 $error: #b40000;
-
-
-
+$button-blue: #0d6efd;
+$button-red: #be0000;
