--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -74,6 +74,11 @@ main{
     background-color: $body-bg;
 }
 
+.horizontal{
+    display: flex;
+    justify-content: space-between;
+}
+
 .myContainer{
     display: flex;
     flex-direction: column;
@@ -97,7 +102,8 @@ main{
 
     input[type="text"],
     input[type="email"],
-    input[type="password"]{
+    input[type="password"],
+    input[type="date"]{
         background-color: #D9D9D9;
         width: 100%;
         padding: 1.7rem .3rem .3rem;
@@ -123,7 +129,7 @@ main{
 }
 
 .submit{
-    width: 20rem;
+    width: 100%;
     height: 4rem;
     border-radius: 12px;
     background-color: $secondary-color;
