--- a/resources/sass/main/index.scss
+++ b/resources/sass/main/index.scss
@@ -115,8 +115,10 @@
         h2{
             margin: 0;
         }
-        span{
-            color: black;
+        svg{
+            path{
+                color: black;
+            }
             margin-right: .5rem;
         }
     }
