Added school code on main for admin

--- a/resources/sass/main/index.scss
+++ b/resources/sass/main/index.scss
@@ -139,6 +139,11 @@
 
 }
 
+.code{
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+}
+
 #create{
     margin-bottom: 2rem;
     .content-container{
