Added style for hours

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -104,6 +104,7 @@ main{
     input[type="email"],
     input[type="password"],
     input[type="date"],
+    input[type="time"],
     select{
         background-color: #D9D9D9;
         width: 100%;
