--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -119,6 +119,16 @@ main{
             outline: none;
         }
     }
+
+    select{
+        height: 62px;
+        
+        option{
+            background-color: #D9D9D9;
+            color: black;
+        }
+    }
+
 }
 .error{
     color: $error;
