--- a/resources/sass/hours/index.scss
+++ b/resources/sass/hours/index.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 3rem;
+
 
         .submit{
             width: 10rem;
@@ -25,6 +25,7 @@
         background-color: #D9D9D9;
         border-radius: 1rem;
         padding: 1.5rem;
+        margin-top: 3rem;
 
 
         .singleEl{
