--- a/resources/sass/bookings/index.scss
+++ b/resources/sass/bookings/index.scss
@@ -28,3 +28,28 @@ th{
         padding: 5px 10px;
     }
 }
+
+@media screen and (max-width:640px) {
+    .horizontal{
+        flex-wrap: wrap;
+    }
+
+    table, thead, tbody, th, td, tr {
+        display: block;
+    }
+
+    thead {
+        display: none; /* Nasconde l'intestazione della tabella */
+    }
+
+    tr {
+        margin-bottom: 10px; /* Spazio tra righe */
+    }
+
+    td {
+        display: flex;
+        justify-content: space-between;
+        padding: 8px;
+        border: 1px solid #ddd;
+    }
+}
