--- a/resources/sass/categories/create.scss
+++ b/resources/sass/categories/create.scss
@@ -8,6 +8,7 @@
                 display: flex;
                 justify-content: space-between;
                 margin: 2rem 0;
+
                 svg{
                 font-size: 2rem;
                 }
@@ -30,5 +31,12 @@
     }
     .btn-check:checked + .btn{
         background-color: #E95622;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    .check{
+        flex-wrap: wrap;
+        justify-content: left !important;
     }
 }
